# rust-workshop-chat

./: Cargo.toml
docs/: index.html  slides.md  style.css
examples/: server.rs  server2.rs  step0.rs  step1.rs  step2.rs  step3-bad.rs  step3-better.rs
src/: main.rs
