[package]
name = "workshop-chat"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-backtrace = "0.3.0"
env_logger = "0.7.1"
log = "0.4.8"

[dependencies.serde]
version = "1.0"
features = ["derive"]
